--- a/Untitled-1 copy.html
+++ b/Untitled-1 copy.html
@@ -36,12 +36,8 @@
 </div>
 <div class="bg">
 </section>
-<video src=""></video>
-<img class = "chords" src="img/gruppa-krovi-PhotoRoom.png-PhotoRoom.png" alt="">
-<p class = "strumming">Бой:</p>
-<img class = "strum" src ="img/бой-1-PhotoRoom.png-PhotoRoom.png" alt = "">
+    <img class = "tabs" src="img/Pli1FHn2Qs0-PhotoRoom.png-PhotoRoom.png" alt="">
 <section>
-    <p class = "title"> Группа Крови-Кино</p>
 
 </div>
 <audio  autoplay loop src="Giorno theme but only the good part Sound Effect.mp3"></audio>
