--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="Untitled-1.html">аккорды</a>
             </li>
             <li>
-                <a href="">табы</a>
+                <a href="Untitled-1 copy.html">табы</a>
             </li>
             <li>
                 <a href="">каверы</a>
