--- a/Untitled-1 copy.html
+++ b/Untitled-1 copy.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyGuitarka</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type = "image/x-icon" href = "img/free-icon-guitar-6777841.png">
+
 </head>
 <body>
     <div class="header">
     <ul>
         <li>
-            <a href="">аккорды</a>
+            <a href="Untitled-1.html">аккорды</a>
         </li>
         <li>
-            <a href="">табы</a>
+            <a href="Untitled-1 copy.html">табы</a>
         </li>
         <li>
             <a href="">каверы</a>
         </li>
         <li>
-            <a href="">гайды</a>
+            <a href="index copy.html">гайды</a>
         </li>
         <li>
             <a href="">наши разработчики</a>
@@ -37,7 +39,10 @@
 <div class="bg">
 </section>
     <img class = "tabs" src="img/Pli1FHn2Qs0-PhotoRoom.png-PhotoRoom.png" alt="">
-<section>
+    <p class = "txt_tabs">Как играть по табам?<br>да очень просто!Шесть линеек это струны
+    ,а цифры показывают какой лад надо зажимать.А про остальные тонкости узнать можно в разделе гайды.
+    </p>
+<ection>
 
 </div>
 <audio  autoplay loop src="Giorno theme but only the good part Sound Effect.mp3"></audio>
