--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,28 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyGuitarka</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type = "image/x-icon" href = "img/free-icon-guitar-6777841.png">
+
 </head>
 <body>
     <div class="header">
-    <ul>
-        <li>
-            <a href="">аккорды</a>
-        </li>
-        <li>
-            <a href="">табы</a>
-        </li>
-        <li>
-            <a href="">каверы</a>
-        </li>
-        <li>
-            <a href="">гайды</a>
-        </li>
-        <li>
-            <a href="">наши разработчики</a>
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <a href="Untitled-1.html">аккорды</a>
+            </li>
+            <li>
+                <a href="Untitled-1 copy.html">табы</a>
+            </li>
+            <li>
+                <a href="">каверы</a>
+            </li>
+            <li>
+                <a href="index copy.html">гайды</a>
+            </li>
+            <li>
+                <a href="">наши разработчики</a>
+            </li>
+        </ul>
 
     
 
