--- a/index copy 2.html
+++ b/index copy 2.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type = "image/x-icon" href = "img/free-icon-guitar-6777841.png">
 
+
 </head>
 <body>
-    
     <div class="header">
         <ul>
             <li>
@@ -20,7 +20,7 @@
                 <a href="Untitled-1 copy.html">табы</a>
             </li>
             <li>
-                <a href="index copy 2.html">каверы</a>
+                <a href="">каверы</a>
             </li>
             <li>
                 <a href="index copy.html">гайды</a>
@@ -37,11 +37,12 @@
         <div class = "wrapper img"> 
         </div> 
         <p class = "txt">
+
     </section>
     </div>
     <div class="bg">
-
+        <video class = "cover" autoplay src="img/Unravel - Tokyo Ghoul OP 1 [Full Version] Fingerstyle Guitar Cover.mp4"></video>
+        <p class="cover_txt">Кавер на опенинг аниме "Токийский гуль" Unravel <br>Eddie van der Meer</p>
     </div>
-    <audio  autoplay loop src="Giorno theme but only the good part Sound Effect.mp3"></audio>
 </body>
 </html>
