--- a/index copy.html
+++ b/index copy.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type = "image/x-icon" href = "img/free-icon-guitar-6777841.png">
 
+
 </head>
 <body>
-    
     <div class="header">
         <ul>
             <li>
@@ -20,7 +20,7 @@
                 <a href="Untitled-1 copy.html">табы</a>
             </li>
             <li>
-                <a href="index copy 2.html">каверы</a>
+                <a href="">каверы</a>
             </li>
             <li>
                 <a href="index copy.html">гайды</a>
